<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:photopette="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/baseline_refresh_white_24"
        android:title=""
        photopette:showAsAction="ifRoom"

        />

</menu>