...
                android:padding="3dp"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorPrimary"/>
            <!-- ImageButton Decreased Volume -->
            <ImageButton
                android:id="@+id/ibDecreasedVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_trending_down_24"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
...
